// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Selector > should render a checked selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible)+label::before {
  box-shadow: none;
}

.circuit-0:checked+label {
  background-color: var(--cui-bg-accent);
}

.circuit-0:checked+label::before {
  border: 2px solid var(--cui-border-accent);
}

.circuit-0:disabled+label,
.circuit-0[disabled]+label {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:disabled+label::before,
.circuit-0[disabled]+label::before {
  border: 2px solid var(--cui-border-normal-disabled);
}

.circuit-0:disabled:checked+label,
.circuit-0[disabled]:checked+label {
  background-color: var(--cui-bg-accent-disabled);
}

.circuit-0:disabled:checked+label::before,
.circuit-0[disabled]:checked+label::before {
  border: 2px solid var(--cui-border-accent-disabled);
}

<input
    checked=""
    class="circuit-0"
    id=":r2:"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  text-align: center;
  position: relative;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  padding: calc(12px) 24px;
}

.circuit-0::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid var(--cui-border-normal);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-0:hover::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-0:active::before {
  border-color: var(--cui-border-normal-pressed);
}

<label
    class="circuit-0"
    for=":r2:"
  >
    Label
  </label>,
]
`;

exports[`Selector > should render a default selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible)+label::before {
  box-shadow: none;
}

.circuit-0:checked+label {
  background-color: var(--cui-bg-accent);
}

.circuit-0:checked+label::before {
  border: 2px solid var(--cui-border-accent);
}

.circuit-0:disabled+label,
.circuit-0[disabled]+label {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:disabled+label::before,
.circuit-0[disabled]+label::before {
  border: 2px solid var(--cui-border-normal-disabled);
}

.circuit-0:disabled:checked+label,
.circuit-0[disabled]:checked+label {
  background-color: var(--cui-bg-accent-disabled);
}

.circuit-0:disabled:checked+label::before,
.circuit-0[disabled]:checked+label::before {
  border: 2px solid var(--cui-border-accent-disabled);
}

<input
    class="circuit-0"
    id=":r0:"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  text-align: center;
  position: relative;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  padding: calc(12px) 24px;
}

.circuit-0::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid var(--cui-border-normal);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-0:hover::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-0:active::before {
  border-color: var(--cui-border-normal-pressed);
}

<label
    class="circuit-0"
    for=":r0:"
  >
    Label
  </label>,
]
`;

exports[`Selector > should render a disabled selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible)+label::before {
  box-shadow: none;
}

.circuit-0:checked+label {
  background-color: var(--cui-bg-accent);
}

.circuit-0:checked+label::before {
  border: 2px solid var(--cui-border-accent);
}

.circuit-0:disabled+label,
.circuit-0[disabled]+label {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:disabled+label::before,
.circuit-0[disabled]+label::before {
  border: 2px solid var(--cui-border-normal-disabled);
}

.circuit-0:disabled:checked+label,
.circuit-0[disabled]:checked+label {
  background-color: var(--cui-bg-accent-disabled);
}

.circuit-0:disabled:checked+label::before,
.circuit-0[disabled]:checked+label::before {
  border: 2px solid var(--cui-border-accent-disabled);
}

<input
    class="circuit-0"
    disabled=""
    id=":r1:"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  text-align: center;
  position: relative;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  padding: calc(12px) 24px;
}

.circuit-0::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid var(--cui-border-normal);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-0:hover::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-0:active::before {
  border-color: var(--cui-border-normal-pressed);
}

<label
    class="circuit-0"
    for=":r1:"
  >
    Label
  </label>,
]
`;
